# bokusu

./: .deepsource.toml  .editorconfig  .gitignore  .graphqlrc.json  README.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: python-package.yml
bokusu/: __main__.py
bokusu/assets/: .logo-swatches.ans  logo.ans
bokusu/core/: commons.py  const.py  folder.py  pkce_generator.py
bokusu/models/: config.py  malxml.py  rymsf.py  xml.py
bokusu/services/anidb/: anidb.py  models.py
bokusu/services/anilist/: anilist.py  manga_query.gql  models.py
bokusu/services/animeplanet/: animeplanet.py
bokusu/services/bgm/: openapi.yml
bokusu/services/kitsu/: schema.gql
bokusu/services/kurozora/: openapi.json
bokusu/services/livechart/: schema.gql
bokusu/services/malscraper/: client.py
bokusu/services/mangadex/: openapi.yml
bokusu/services/mangaupdates/: openapi.yml
bokusu/services/rawg/: swagger.json
bokusu/services/shikimori/: schema.gql
bokusu/services/simkl/: openapi.yml
bokusu/services/trakt/: openapi.yml
bokusu/services/wayback/: client.py
docs/: malxml-spec.md
firstrun/core/: pkce_generator.py
firstrun/server/: __main__.py  server.py
firstrun/server/models/: anilist.py
hikaru/anilist/: anilist.py
hikaru/core/: commons.py  folder.py
hikaru/malscraper/: client.py
hikaru/models/: rymsf.py
hikaru/wayback/: client.py
hikaruaegis/anilist/: anilist.py  anime_query.gql
hikaruaegis/animeplanet/: animeplanet.py
hikaruaegis/core/: folder.py  pkce_generator.py
hikaruaegis/malscraper/: client.py
hikaruaegis/services/anilist/: anilist.py  anime_query.gql  models.py
hikaruaegis/wayback/: client.py
